# Automacao-Sinistros-Engine

./: .env.example  .gitignore  README.md  __init__.py  debug_interface.py  executar.bat  executar_interface.bat  gui_launcher.py  pyproject.toml  requirements.txt  test_remetente.py
config/: monitor.json  settings.json
core/: __init__.py  main.py
data/processed/: .gitkeep
data/reports/: relatorio_execucao_20250910_140247.json  relatorio_execucao_20250910_140657.json  relatorio_execucao_20250910_140940.json  relatorio_execucao_20250910_141940.json  relatorio_execucao_20250910_155021.json  relatorio_execucao_20250910_155325.json  relatorio_execucao_20250923_120200.json  relatorio_execucao_20250923_132748.json  relatorio_execucao_20250923_133242.json  relatorio_execucao_20250923_133402.json  relatorio_execucao_20250923_134055.json  relatorio_execucao_20250923_134622.json  relatorio_execucao_20250923_135557.json  relatorio_execucao_20250923_142650.json  relatorio_execucao_20250923_143252.json  relatorio_execucao_20250923_143453.json  relatorio_execucao_20250923_182343.json  relatorio_execucao_20250923_183118.json  relatorio_execucao_20250923_183816.json  relatorio_inicial.json
data/screenshots/: .gitkeep
docs/: CAMINHOS_CRITICOS.md  DIAGRAMA_VISUAL.md  FLUXOGRAMA_COMPLETO.md
monitors/: __init__.py  folder_monitor.py
services/: __init__.py  email_service.py  login_service.py  navigation_service.py  sinistro_processor.py
tests/: __init__.py
tests/integration/: test_system.py
tests/unit/: test_helpers.py  test_main.py
utils/: __init__.py  gerenciar_processos_encerrados.py  helpers.py  screenshot_manager.py  webdriver_setup.py
